Fixed links in web config, fixed issue with pushover

--- a/Configuration/pushOverPage.html
+++ b/Configuration/pushOverPage.html
@@ -10,8 +10,8 @@
             <div class="content-primary">
                 <div data-role="controlgroup" data-type="horizontal" class="localnav" data-mini="true">
                     <a href="ConfigurationPage?name=OverView" data-role="button">Overview</a>
-                    <a href="#" data-role="button">Pushover</a>
-                    <a href="ConfigurationPage?name=SMTPOptions" data-role="button" class="ui-btn-active">SMTP</a>
+                    <a href="#" data-role="button" class="ui-btn-active">Pushover</a>
+                    <a href="ConfigurationPage?name=SMTPOptions" data-role="button">SMTP</a>
                 </div>
 
                 <form class="notificationConfigurationForm">
