--- a/Configuration/overviewPage.html
+++ b/Configuration/overviewPage.html
@@ -9,9 +9,9 @@
         <div data-role="content">
             <div class="content-primary">
                 <div data-role="controlgroup" data-type="horizontal" class="localnav" data-mini="true">
-                    <a href="#" data-role="button">Overview</a>
+                    <a href="#" data-role="button" class="ui-btn-active">Overview</a>
                     <a href="ConfigurationPage?name=PushOverOptions" data-role="button">Pushover</a>
-                    <a href="ConfigurationPage?name=SMTPOptions" data-role="button" class="ui-btn-active">SMTP</a>
+                    <a href="ConfigurationPage?name=SMTPOptions" data-role="button">SMTP</a>
                 </div>
 
                 <form class="notificationConfigurationForm">
