Added PushALot Web Interface

--- a/Configuration/SMTPPage.html
+++ b/Configuration/SMTPPage.html
@@ -12,6 +12,7 @@
                     <a href="ConfigurationPage?name=OverView" data-role="button">Overview</a>
                     <a href="ConfigurationPage?name=PushOverOptions" data-role="button">Pushover</a>
                     <a href="#" data-role="button" class="ui-btn-active">SMTP</a>
+                    <a href="ConfigurationPage?name=PushALotOptions" data-role="button">PushALot</a>
                 </div>
 
                 <form class="notificationConfigurationForm">
