--- a/Configuration/pushOverPage.html
+++ b/Configuration/pushOverPage.html
@@ -12,6 +12,7 @@
                     <a href="ConfigurationPage?name=OverView" data-role="button">Overview</a>
                     <a href="#" data-role="button" class="ui-btn-active">Pushover</a>
                     <a href="ConfigurationPage?name=SMTPOptions" data-role="button">SMTP</a>
+                    <a href="ConfigurationPage?name=PushALotOptions" data-role="button">PushALot</a>
                 </div>
 
                 <form class="notificationConfigurationForm">
