Added Failed Tasks notifications

--- a/Configuration/SMTPPage.html
+++ b/Configuration/SMTPPage.html
@@ -75,7 +75,7 @@
                             <label for="txtPassword">
                                 SMTP Password :
                             </label>
-                            <input type="text" id="txtPassword" name="txtPassword" />
+                            <input type="password" id="txtPassword" name="txtPassword" />
                             <div class="fieldDescription">
                                 Password for your SMTP Server.
                             </div>
