--- a/Configuration/pushALotPage.html
+++ b/Configuration/pushALotPage.html
@@ -17,6 +17,7 @@
 
                 <form class="notificationConfigurationForm">
                     <h2>PushALot</h2>
+                    <p>To use PushALot register an application at <a href="https://pushalot.com/">pushalot.com</a></p>
                     <ul class="ulForm" data-role="listview">
                         <li>
                             <label for="chkEnablePushALot">Enable PushALot Notifications</label>
