--- a/Configuration/pushOverPage.html
+++ b/Configuration/pushOverPage.html
@@ -17,6 +17,7 @@
 
                 <form class="notificationConfigurationForm">
                     <h2>Pushover</h2>
+                    <p>To use PushOver register an application at <a href="https://pushover.net/">pushover.net</a></p>
                     <ul class="ulForm" data-role="listview">
                         <li>
                             <label for="chkEnablePushOver">Enable PushOver Notifications</label>
