--- a/Configuration/pushALotPage.html
+++ b/Configuration/pushALotPage.html
@@ -13,6 +13,7 @@
                     <a href="ConfigurationPage?name=PushOverOptions" data-role="button">Pushover</a>
                     <a href="ConfigurationPage?name=SMTPOptions" data-role="button">SMTP</a>
                     <a href="#" data-role="button" class="ui-btn-active">PushALot</a>
+                    <a href="ConfigurationPage?name=ProwlOptions" data-role="button">Prowl</a>
                 </div>
 
                 <form class="notificationConfigurationForm">
