--- a/Configuration/overviewPage.html
+++ b/Configuration/overviewPage.html
@@ -13,6 +13,7 @@
                     <a href="ConfigurationPage?name=PushOverOptions" data-role="button">Pushover</a>
                     <a href="ConfigurationPage?name=SMTPOptions" data-role="button">SMTP</a>
                     <a href="ConfigurationPage?name=PushALotOptions" data-role="button">PushALot</a>
+                    <a href="ConfigurationPage?name=ProwlOptions" data-role="button">Prowl</a>
                 </div>
 
                 <form class="notificationConfigurationForm">
